# CVision

./: README.md
.c9/metadata/: tab52
.c9/metadata/workspace/: Filters.cpp  Methods.cpp  Neighbors.cpp  README.md  Utils.cpp  Utils.h
.c9/metadata/workspace/1Borders/: CMakeLists.txt  main.cpp
.c9/metadata/workspace/MedianFilter/: CMakeLists.txt
.c9/metadata/workspace/libs/: Coordinate.cpp  Coordinate.h  Filters.cpp  Filters.h  Utils.cpp  Utils.h
.c9/metadata/workspace/medianFilter/: CMakeLists.txt  newmain.cpp
.c9/metadata/workspace/preH/: CMakeLists.txt  DisplayImage.cpp
.c9/metadata/workspace/preH/ChannelReplace/: CMakeLists.txt  main.cpp
.c9/metadata/workspace/preH/MedianFilter/: CMakeLists.txt  main.cpp
1Borders/: CMakeLists.txt  README.md  main.cpp
Borders/: CMakeLists.txt  README.md  borders  main.cpp
Circles/: CMakeLists.txt  README.md  main.cpp
Ellipses/: CMakeLists.txt  README.md  main.cpp
Forms/: Makefile
Holes/: CMakeLists.txt  README.md  main.cpp
Lines/: CMakeLists.txt  README.md  main.cpp
Objects/: CMakeLists.txt  Makefile  README.md  main.cpp  objects
Streets/: CMakeLists.txt  Makefile  README.md  main.cpp  streets
libs/: Coordinate.cpp  Coordinate.h  Ellipse.cpp  Ellipse.h  Filters.cpp  Filters.h  Kernel.cpp  Kernel.h  Neighborhood.cpp  Neighborhood.h  NewUtils.cpp  NewUtils.h  Pixel.cpp  Pixel.h  Shape.cpp  Shape.h  Utils.cpp  Utils.h  }
medianFilter/: CMakeLists.txt  README.md  main.cpp
preH/: DisplayImage  DisplayImage.cpp  README.md
preH/ChannelReplace/: CMakeLists.txt  main.cpp
preH/MedianFilter/: CMakeLists.txt  MedianFilter  README.md  main.cpp
